update test report

--- a/documents/QA/Test Report Analyse.ipynb
+++ b/documents/QA/Test Report Analyse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of tests:  9\n",
-      "\u001b[32mTests passing: 8\u001b[39m\n",
-      "\u001b[31mTests failing: 1\u001b[39m\n"
+      "\u001b[31mError: Number of tests passed and failed does not equal total number of tests\u001b[39m\n"
      ]
     }
    ],
@@ -45,7 +43,11 @@
     "def check_tests_status():\n",
     "    number_of_tests = df.shape[0]\n",
     "    number_of_tests_passed = df['Status'].value_counts()['Yes']\n",
-    "    number_of_tests_failed = df['Status'].value_counts()['No']\n",
+    "\n",
+    "    if 'No' not in df['Status'].value_counts():\n",
+    "        number_of_tests_failed = 0\n",
+    "    else:\n",
+    "        number_of_tests_failed = df['Status'].value_counts()['No']\n",
     "\n",
     "    if number_of_tests_passed + number_of_tests_failed != number_of_tests:\n",
     "        print_red(\"Error: Number of tests passed and failed does not equal total number of tests\")\n",
@@ -59,23 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number:  9\n",
-      "Type of issue:  Building the game in release mode remove the ability preview\n",
-      "Steps to reproduce:  1. Build the game in release mode. 2. Take over an alien. 3. Try to use an ability\n",
-      "How to fix:  Need to make the same function but for release mode\n",
+      "number:  17\n",
+      "Type of issue:  Collision between aliens\n",
+      "Steps to reproduce:  1. Start a level with 2 different aliens 2. Take over one of them 3. Jump on the other one 4. Get out of the first one while you are on the second one 5. Try to take over the 2nd one\n",
+      "How to fix:  Check if all the aliens have a coherent collider and if they are fix on the axis\n",
+      "\n",
+      "number:  18\n",
+      "Type of issue:  Preview issue\n",
+      "Steps to reproduce:  1. Start a level with a jumper 2. Take over the jumper 3. Try to go between 2 set of boxes with 1 cube width between them 4. Try to get out of the jumper\n",
+      "How to fix:  Check from where the preview is shown\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# List all tests that failed and print the Type of issue\n",
+    "\n",
     "def list_failed_tests():\n",
     "    failed_tests = df[df['Status'] == 'No']\n",
     "    for index, row in failed_tests.iterrows():\n",
@@ -90,18 +98,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "number:  17\n",
+      "Importance level:  3.0\n",
+      "Type of issue:  Collision between aliens\n",
+      "Steps to reproduce:  1. Start a level with 2 different aliens 2. Take over one of them 3. Jump on the other one 4. Get out of the first one while you are on the second one 5. Try to take over the 2nd one\n",
+      "How to fix:  Check if all the aliens have a coherent collider and if they are fix on the axis\n",
+      "\n",
+      "number:  18\n",
+      "Importance level:  2.0\n",
+      "Type of issue:  Preview issue\n",
+      "Steps to reproduce:  1. Start a level with a jumper 2. Take over the jumper 3. Try to go between 2 set of boxes with 1 cube width between them 4. Try to get out of the jumper\n",
+      "How to fix:  Check from where the preview is shown\n",
+      "\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Priority list of failed tests based on importance level\n",
+    "\n",
+    "def list_failed_tests_priority():\n",
+    "    failed_tests = df[df['Status'] == 'No']\n",
+    "    failed_tests = failed_tests.sort_values(by=['Importance level'])\n",
+    "    failed_tests = failed_tests.iloc[::-1]\n",
+    "    for index, row in failed_tests.iterrows():\n",
+    "        print(\"number: \", row['Issue Number'])\n",
+    "        print(\"Importance level: \", row['Importance level'])\n",
+    "        print(\"Type of issue: \", row['Type of issue'])\n",
+    "        print(\"Steps to reproduce: \", row['Steps to reproduce'])\n",
+    "        print(\"How to fix: \", row['How to fix(if known)'])\n",
+    "        print(\"\")\n",
+    "\n",
+    "list_failed_tests_priority()"
+   ]
   }
  ],
  "metadata": {
