improve test analysis

--- a/documents/QA/Test Report Analyse.ipynb
+++ b/documents/QA/Test Report Analyse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mError: Number of tests passed and failed does not equal total number of tests\u001b[39m\n"
+      "Number of tests:  21\n",
+      "\u001b[32mTests passing: 19\u001b[39m\n",
+      "\u001b[31mTests failing: 2\u001b[39m\n"
      ]
     }
    ],
@@ -61,22 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number:  17\n",
-      "Type of issue:  Collision between aliens\n",
-      "Steps to reproduce:  1. Start a level with 2 different aliens 2. Take over one of them 3. Jump on the other one 4. Get out of the first one while you are on the second one 5. Try to take over the 2nd one\n",
-      "How to fix:  Check if all the aliens have a coherent collider and if they are fix on the axis\n",
+      "number:  20\n",
+      "Type of issue:  Collision between the slingshot and the parasite\n",
+      "Steps to reproduce:  1. Start a level with a slingshot 2. Take over the slingshot 3. Launch the slingshot in the air 4. Get out of the slingshot in the direction of the ground when you almost touch it\n",
+      "Result:  The parasite will spill infinitely in the ground and will never die\n",
+      "How to fix:  Change the blueprint related to the possession of the slingshot to move the parasite\n",
       "\n",
-      "number:  18\n",
-      "Type of issue:  Preview issue\n",
-      "Steps to reproduce:  1. Start a level with a jumper 2. Take over the jumper 3. Try to go between 2 set of boxes with 1 cube width between them 4. Try to get out of the jumper\n",
-      "How to fix:  Check from where the preview is shown\n",
+      "number:  21\n",
+      "Type of issue:  Collision issue with ramps\n",
+      "Steps to reproduce:  1. Start a level with a small ramp (level 1) 2. Put the parasite in front of a rising ramp 3. Advance the parasite\n",
+      "Result:  The parasite will not be able to climb the ramp\n",
+      "How to fix:  Change the collider of the ramp\n",
       "\n"
      ]
     }
@@ -90,6 +94,7 @@
     "        print(\"number: \", row['Issue Number'])\n",
     "        print(\"Type of issue: \", row['Type of issue'])\n",
     "        print(\"Steps to reproduce: \", row['Steps to reproduce'])\n",
+    "        print(\"Result: \", row['Result'])\n",
     "        print(\"How to fix: \", row['How to fix(if known)'])\n",
     "        print(\"\")\n",
     "\n",
@@ -98,24 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number:  17\n",
-      "Importance level:  3.0\n",
-      "Type of issue:  Collision between aliens\n",
-      "Steps to reproduce:  1. Start a level with 2 different aliens 2. Take over one of them 3. Jump on the other one 4. Get out of the first one while you are on the second one 5. Try to take over the 2nd one\n",
-      "How to fix:  Check if all the aliens have a coherent collider and if they are fix on the axis\n",
+      "number:  21\n",
+      "Importance level:  2\n",
+      "Type of issue:  Collision issue with ramps\n",
+      "Steps to reproduce:  1. Start a level with a small ramp (level 1) 2. Put the parasite in front of a rising ramp 3. Advance the parasite\n",
+      "How to fix:  Change the collider of the ramp\n",
       "\n",
-      "number:  18\n",
-      "Importance level:  2.0\n",
-      "Type of issue:  Preview issue\n",
-      "Steps to reproduce:  1. Start a level with a jumper 2. Take over the jumper 3. Try to go between 2 set of boxes with 1 cube width between them 4. Try to get out of the jumper\n",
-      "How to fix:  Check from where the preview is shown\n",
+      "number:  20\n",
+      "Importance level:  2\n",
+      "Type of issue:  Collision between the slingshot and the parasite\n",
+      "Steps to reproduce:  1. Start a level with a slingshot 2. Take over the slingshot 3. Launch the slingshot in the air 4. Get out of the slingshot in the direction of the ground when you almost touch it\n",
+      "How to fix:  Change the blueprint related to the possession of the slingshot to move the parasite\n",
       "\n"
      ]
     }
