update test report

--- a/documents/QA/Test Report Analysis.ipynb
+++ b/documents/QA/Test Report Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of tests:  22\n",
+      "Number of tests:  24\n",
       "\u001b[32mTests passing: 22\u001b[39m\n",
-      "\u001b[31mTests failing: 0\u001b[39m\n"
+      "\u001b[31mTests failing: 2\u001b[39m\n"
      ]
     }
    ],
@@ -63,14 +63,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mNo failed tests\u001b[39m\n"
+      "number:  24\n",
+      "Importance level:  2\n",
+      "Type of issue:  No clip issue\n",
+      "Steps to reproduce:  1. Start a level with yellow boxes 2. Use the parasite 3. Jump on the corner of a yellow box\n",
+      "Result:  The parasite can pass through the background wall\n",
+      "How to fix:  Change the collider of the yellow box/Block the Y axis of the parasite\n",
+      "\n",
+      "number:  23\n",
+      "Importance level:  1\n",
+      "Type of issue:  Graffity issue\n",
+      "Steps to reproduce:  1.Place a graffity(keystrokes tutorial) in a level 2. Jump on it\n",
+      "Result:  The player can jump on the graffity because there is a collier\n",
+      "How to fix:  Remove the collider of the graffity\n",
+      "\n"
      ]
     }
    ],
