refactor test plan, update test report

--- a/documents/QA/Test Report Analysis.ipynb
+++ b/documents/QA/Test Report Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of tests:  24\n",
-      "\u001b[32mTests passing: 22\u001b[39m\n",
-      "\u001b[31mTests failing: 2\u001b[39m\n"
+      "Number of tests:  32\n",
+      "\u001b[32mTests passing: 25\u001b[39m\n",
+      "\u001b[31mTests failing: 7\u001b[39m\n"
      ]
     }
    ],
@@ -63,26 +63,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number:  24\n",
-      "Importance level:  2\n",
-      "Type of issue:  No clip issue\n",
-      "Steps to reproduce:  1. Start a level with yellow boxes 2. Use the parasite 3. Jump on the corner of a yellow box\n",
-      "Result:  The parasite can pass through the background wall\n",
-      "How to fix:  Change the collider of the yellow box/Block the Y axis of the parasite\n",
+      "number:  29\n",
+      "Importance level:  3\n",
+      "Type of issue:  Throwing out of the grappler\n",
+      "Steps to reproduce:  1. Start a level with a grappler 2. Take over it 3. Try to throw out of it\n",
+      "Actual result:  You cannot throw out of the grappler\n",
+      "Expected result:  The player should be able to get out of the grappler\n",
+      "How to fix:  Add the already existing script to throw out of the alien\n",
       "\n",
-      "number:  23\n",
+      "number:  28\n",
+      "Importance level:  3\n",
+      "Type of issue:  Throwing when hooked\n",
+      "Steps to reproduce:  1. Start a level with a grappler 2. Take over the grappler 3. Use the grappling hook on any surface 4. Try to throw out of the grappler while you are hooked\n",
+      "Actual result:  You cannot throw out of the grappler while you are hooked and since you can't remove the hook you are stuck\n",
+      "Expected result:  The player needs to have a way to get out of the grappler he is when hooked to a surface\n",
+      "How to fix:  Add a way to remove the hook from a surface\n",
+      "\n",
+      "number:  27\n",
+      "Importance level:  3\n",
+      "Type of issue:  Grappling hook not precise\n",
+      "Steps to reproduce:  1. Start a level with a grappler 2. Take over the grappler 3. Use the grappling hook on an aerial surface 4. Try to use it on another aerial surface 5. You can grab the opposite way\n",
+      "Actual result:  The grappling hook can sometimes be not precise and will not attach to the right surface\n",
+      "Expected result:  The grappling hook needs to shoot where the player is aiming\n",
+      "How to fix:  Change the detection system of the grappling hook\n",
+      "\n",
+      "number:  32\n",
+      "Importance level:  2\n",
+      "Type of issue:  Slingshot collider issue\n",
+      "Steps to reproduce:  1. Start a level with a slingshot and with black and white boxes 2. Take over the slingshot 3. Jump on the corner of a black box\n",
+      "Actual result:  You can jump again and you are stuck in the wall\n",
+      "Expected result:  Player's movements should not be limited by a collider\n",
+      "How to fix:  Change the collider of the black box\n",
+      "\n",
+      "number:  26\n",
+      "Importance level:  2\n",
+      "Type of issue:  Grappling hook on surface\n",
+      "Steps to reproduce:  1. Start a level with a grappler 2. Take over the grappler 3. Use the grappling hook on a surface 4. Try to remove the hook from the surface\n",
+      "Actual result:  You cannot remove the hook from the surface which restrict the player's movement\n",
+      "Expected result:  The player should be able to remove the hook from a wall\n",
+      "How to fix:  Add a button to remove the hook from the surface\n",
+      "\n",
+      "number:  31\n",
       "Importance level:  1\n",
-      "Type of issue:  Graffity issue\n",
-      "Steps to reproduce:  1.Place a graffity(keystrokes tutorial) in a level 2. Jump on it\n",
-      "Result:  The player can jump on the graffity because there is a collier\n",
-      "How to fix:  Remove the collider of the graffity\n",
+      "Type of issue:  Throwing preview\n",
+      "Steps to reproduce:  1. Start a level with an alien 2. Take over it 3. Overlap the alien with another one 4. Try to throw out of the alien\n",
+      "Actual result:  The throw preview is not shown because it is stuck in the alien\n",
+      "Expected result:  The preview should not take into account the alien\n",
+      "How to fix:  Change the axis of the throw preview\n",
+      "\n",
+      "number:  30\n",
+      "Importance level:  1\n",
+      "Type of issue:  Slingshot preview\n",
+      "Steps to reproduce:  1. Start a level with a slingshot 2. Take over the slingshot 3. Overlap the slingshot with another alien 4. Try to jump with the slingshot\n",
+      "Actual result:  The preview is not shown because it is stuck in the alien\n",
+      "Expected result:  The preview should not take into account the alien\n",
+      "How to fix:  Change the Y axis of the preview\n",
       "\n"
      ]
     }
@@ -92,17 +134,18 @@
     "\n",
     "def list_failed_tests_priority():\n",
     "    failed_tests = df[df['Status'] == 'No']\n",
-    "    failed_tests = failed_tests.sort_values(by=['Importance level'])\n",
+    "    failed_tests = failed_tests.sort_values(by=['Severity'])\n",
     "    failed_tests = failed_tests.iloc[::-1]\n",
     "    if failed_tests.empty:\n",
     "        print_green(\"No failed tests\")\n",
     "    else:\n",
     "        for index, row in failed_tests.iterrows():\n",
-    "            print(\"number: \", row['Issue Number'])\n",
-    "            print(\"Importance level: \", row['Importance level'])\n",
-    "            print(\"Type of issue: \", row['Type of issue'])\n",
+    "            print(\"number: \", row['Bug ID'])\n",
+    "            print(\"Importance level: \", row['Severity'])\n",
+    "            print(\"Type of issue: \", row['Bug Description'])\n",
     "            print(\"Steps to reproduce: \", row['Steps to reproduce'])\n",
-    "            print(\"Result: \", row['Result'])\n",
+    "            print(\"Actual result: \", row['Actual result'])\n",
+    "            print(\"Expected result: \", row['Expected result'])\n",
     "            print(\"How to fix: \", row['How to fix(if known)'])\n",
     "            print(\"\")\n",
     "\n",
