update test report and fix typo

--- a/documents/QA/Test Report Analysis.ipynb
+++ b/documents/QA/Test Report Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -37,8 +37,8 @@
      "output_type": "stream",
      "text": [
       "Number of tests:  55\n",
-      "\u001b[32mTests passing: 44\u001b[39m\n",
-      "\u001b[31mTests failing: 11\u001b[39m\n"
+      "\u001b[32mTests passing: 52\u001b[39m\n",
+      "\u001b[31mTests failing: 3\u001b[39m\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -76,88 +76,24 @@
       "Type of issue:  Gravity walk\n",
       "Steps to reproduce:  1.Start a level with a \"gravity\" 2. Take over it 3. Invert the gravity 4. Try to walk\n",
       "Actual result:  Keybindings for movement are not inverted for instance the \"left\" key will make the player go to the right\n",
-      "Expected result:  The player should be able to walk in the opposite direction of the gravity\n",
+      "Expected result:  The player should be able to walk in the opposite direction of gravity\n",
       "How to fix:  Change the movement bindings when the gravity is inverted\n",
       "\n",
       "number:  53\n",
       "Importance level:  3\n",
       "Type of issue:  Gravity ground check\n",
       "Steps to reproduce:  1.Start a level with a \"gravity\" 2.Take over it 3. Invert the gravity 4. Invert the gravity in the air\n",
-      "Actual result:  The player can inverte the gravity in the air even if he is not touching the ground\n",
+      "Actual result:  The player can invert the gravity in the air even if he is not touching the ground\n",
       "Expected result:  The player should only be able to invert the gravity when he is touching the ground\n",
       "How to fix:  Add a condition to check if the gravity is touching the ground to activate the gravity inversion\n",
-      "\n",
-      "number:  50\n",
-      "Importance level:  3\n",
-      "Type of issue:  Bumper collision\n",
-      "Steps to reproduce:  1.Start a level with a \"jumper\" and a \"bumper\" 2. Take over the \"jumper\" 3. Jump on the bumper\n",
-      "Actual result:  The jumper will not bump on the bumper\n",
-      "Expected result:  The jumper should be able to bump on the bumper\n",
-      "How to fix:  Change the collider of the bumper\n",
       "\n",
       "number:  55\n",
       "Importance level:  2\n",
       "Type of issue:  Gravity rotation\n",
       "Steps to reproduce:  1.Start a level with a \"gravity\" 2. Take over it 3. Invert the gravity 4. Re-invert the gravity before touching the ground\n",
-      "Actual result:  The gravity will goes back to normal even if the sprite of the player will still be inverted\n",
+      "Actual result:  The gravity will go back to normal even if the sprite of the player will still be inverted\n",
       "Expected result:  The player's sprite should be inverted only when the gravity is inverted\n",
       "How to fix:  Add a condition to the sprite to check if the gravity is inverted\n",
-      "\n",
-      "number:  52\n",
-      "Importance level:  2\n",
-      "Type of issue:  Bumper animation\n",
-      "Steps to reproduce:  1.Start a level with a \"jumper\" and a \"bumper\" 2. Take over the \"jumper\" 3. Jump on the bumper\n",
-      "Actual result:  The bumper will start the animation even if the player is not propulsed\n",
-      "Expected result:  The bumper should only start the animation if the player is propulsed\n",
-      "How to fix:  Add a condition to the animation\n",
-      "\n",
-      "number:  51\n",
-      "Importance level:  2\n",
-      "Type of issue:  Bumper collision\n",
-      "Steps to reproduce:  1.Start a level with a \"jumper\" and a \"bumper\" 2. Take over the \"jumper\" 3. Jump on the bumper 4. Get out of the jumer in the air\n",
-      "Actual result:  The bumper will propulse the player in the air\n",
-      "Expected result:  The bumper should just make the player bounce no matter which character he is controlling\n",
-      "How to fix:  Change the collider of the bumper\n",
-      "\n",
-      "number:  49\n",
-      "Importance level:  2\n",
-      "Type of issue:  Viewport responsiveness\n",
-      "Steps to reproduce:  1.Start a level 2.Open the pause menu 3. Resize the window\n",
-      "Actual result:  The menu is not responsive to the window size\n",
-      "Expected result:  The menu should always be center in the window\n",
-      "How to fix:  Block the viewport\n",
-      "\n",
-      "number:  48\n",
-      "Importance level:  2\n",
-      "Type of issue:  Slingshot bumper Collision\n",
-      "Steps to reproduce:  1.Start a level with a \"slingshot\" and a \"bumper\" 2. Take over the \"slingshot\" 3. Jump on the bumper 4. Exit the slingshot in the air\n",
-      "Actual result:  The slingshot will glitch into the bumper and when you take over the slingshot again you will glitch out of the map\n",
-      "Expected result:  The slingshot should just bounce on the bumper even if the the player does not control it\n",
-      "How to fix:  Change the collider of the bumper\n",
-      "\n",
-      "number:  47\n",
-      "Importance level:  2\n",
-      "Type of issue:  Slingshot bumper Collision\n",
-      "Steps to reproduce:  1.Start a level with a \"slingshot\" and a \"bumper\" 2. Take over the \"slingshot\" 3. Jump on the corner of the bumper\n",
-      "Actual result:  The bumper will stuck the player\n",
-      "Expected result:  The player should only bounce on the bumper\n",
-      "How to fix:  Change the collider of the bumper\n",
-      "\n",
-      "number:  44\n",
-      "Importance level:  2\n",
-      "Type of issue:  Grappling preview\n",
-      "Steps to reproduce:  1.Start a level with a \"grappler\" 2. Take over one 3. There is no indication of where the player aims\n",
-      "Actual result:  The player doesn't know where he aims\n",
-      "Expected result:  The player should be able to see the directions he aims\n",
-      "How to fix:  Add a preview of the direction the player aims\n",
-      "\n",
-      "number:  43\n",
-      "Importance level:  2\n",
-      "Type of issue:  Grappler collider\n",
-      "Steps to reproduce:  1.Start a level with a \"grappler\" 2. Take over one 3. Jump on the corner of a yellow box\n",
-      "Actual result:  You can jump again and the player is stuck in the wall\n",
-      "Expected result:  The grappler should slide on the wall\n",
-      "How to fix:  Change the collider of the grappler\n",
       "\n"
      ]
     }
@@ -187,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
